--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,11 @@
-attrs==21.2.0
-imutils==0.5.4
-iniconfig==1.1.1
-joblib==1.0.1
-numpy==1.20.2
-opencv-python==4.4.0.44
-packaging==20.9
-pandas==1.2.4
+atomicwrites==1.3.0
+attrs==19.3.0
+colorama==0.4.3
+more-itertools==8.2.0
+packaging==20.3
 pluggy==0.13.1
-py==1.10.0
-pyparsing==2.4.7
-pytest==6.2.4
-python-dateutil==2.8.1
-pytz==2021.1
-scikit-learn==0.24.1
-scipy==1.6.2
-six==1.15.0
-sklearn==0.0
-threadpoolctl==2.1.0
-toml==0.10.2
+py==1.8.1
+pyparsing==2.4.6
+pytest==5.4.1
+six==1.14.0
+wcwidth==0.1.8
